Fix SearchAddressResponse on mobile screen

--- a/src/widgets/search-address-response/ui/index.module.scss
+++ b/src/widgets/search-address-response/ui/index.module.scss
@@ -1,7 +1,7 @@
 @import "@shared/styles/variables.scss";
 
 .SearchAddressResponse {
-  margin-top: 32px;
+  margin: 32px 0;
   padding: 24px;
   box-shadow: 0 2px 8px rgba(2, 0, 97, 0.25);
   border-radius: 10px;
